The compiler for PowerPC versions of BeOS is about as pedantic as I've ever seen so this set of patches gets it working with no niggles.  The autoconf also gives answers that don't work so these are set to get around this problem.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59540 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -35,6 +35,11 @@ dnl # this is the place to put specific options for platform/compiler
 dnl # combinations
 case "$OS:$CC" in
     *-hp-hpux*:cc ) CFLAGS="$CFLAGS -Ae +DAportable" ;;
+    powerpc-*-beos:mwcc* )
+        CPP="mwcc -E"
+        CC="mwcc"
+        AR="ar"
+        ;;
 esac
 
 
