--- a/file_io/beos/Makefile.in
+++ b/file_io/beos/Makefile.in
@@ -9,9 +9,8 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../../inc
-INCDIR1=../../include -I../unix
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
+INCDIR=../../include -I../unix
+INCLUDES=-I$(INCDIR) -I.
 
 LIB=libfile.a
 
