--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -10,10 +10,9 @@ RM=@RM@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../inc
-INCDIR1=../include
-INCDIR2=../misc/@OSDIR@
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2)
+INCDIR=../include
+INCDIR1=../misc/@OSDIR@
+INCLUDES=-I$(INCDIR) -I$(INCDIR1)
 
 LIB=@LIBPREFIX@apr.a
 
