--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -70,6 +70,7 @@ typedef  @off_t_value@           ap_off_t;
 #define API_EXPORT(type)         type
 #define API_EXPORT_NONSTD(type)  type
 #define API_VAR_IMPORT           extern
+#define API_VAR_EXPORT           
 
 
 #endif /* APR_H */
