--- a/time/unix/Makefile.in
+++ b/time/unix/Makefile.in
@@ -15,7 +15,8 @@ INCLUDES=-I$(INCDIR) -I.
 LIB=libtime.a
 
 OBJS=time.o \
-	access.o
+	access.o \
+	timestr.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
@@ -53,10 +54,16 @@ depend:
 access.o: access.c atime.h ../../include/apr_config.h \
  ../../include/apr_time.h ../../include/apr_general.h \
  ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h
+ ../../include/apr_file_io.h ../../include/apr_thread_proc.h
 time.o: time.c atime.h ../../include/apr_config.h \
  ../../include/apr_time.h ../../include/apr_general.h \
  ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_network_io.h \
+ ../../include/apr_file_io.h ../../include/apr_thread_proc.h \
+ ../../include/apr_portable.h ../../include/apr_network_io.h \
+ ../../include/apr_lock.h
+timestr.o: timestr.c atime.h ../../include/apr_config.h \
+ ../../include/apr_time.h ../../include/apr_general.h \
+ ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
+ ../../include/apr_file_io.h ../../include/apr_thread_proc.h \
+ ../../include/apr_portable.h ../../include/apr_network_io.h \
  ../../include/apr_lock.h
