Fix the build process for APR.  There is no reason to build each library individually if we are just going to combine them into one library later. I am just commenting out those lines we don't need anymore.  They will probably go away very soon, but I want to think about it a bit more.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59544 13f79535-47bb-0310-9956-ffa450edef68

--- a/file_io/unix/Makefile.in
+++ b/file_io/unix/Makefile.in
@@ -9,11 +9,10 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../../inc
-INCDIR1=../../include
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
+INCDIR=../../include
+INCLUDES=-I$(INCDIR) -I.
 
-LIB=libfile.a
+#LIB=libfile.a
 
 OBJS=dir.o \
 	fileacc.o \
@@ -27,7 +26,7 @@ OBJS=dir.o \
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
 
-all: $(LIB)
+all: $(OBJS)
 
 clean:
 	$(RM) -f *.o *.a *.so
@@ -37,10 +36,10 @@ distclean: clean
 
 $(OBJS): Makefile
 
-$(LIB): $(OBJS)
-	$(RM) -f $@
-	$(AR) cr $@ $(OBJS)
-	$(RANLIB) $@
+#$(LIB): $(OBJS)
+#	$(RM) -f $@
+#	$(AR) cr $@ $(OBJS)
+#	$(RANLIB) $@
 
 #
 # We really don't expect end users to use this rule.  It works only with
