--- a/locks/unix/Makefile.in
+++ b/locks/unix/Makefile.in
@@ -9,12 +9,11 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../../inc
 INCDIR1=../../include
 INCDIR2=../../file_io/unix
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
+INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I.
 
-LIB=liblock.a
+#LIB=liblock.a
 
 OBJS=locks.o \
 	crossproc.o \
@@ -23,7 +22,7 @@ OBJS=locks.o \
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
 
-all: $(LIB)
+all: $(OBJS)
 
 clean:
 	$(RM) -f *.o *.a *.so
@@ -33,10 +32,10 @@ distclean: clean
 
 $(OBJS): Makefile
 
-$(LIB): $(OBJS)
-	$(RM) -f $@
-	$(AR) cr $@ $(OBJS)
-	$(RANLIB) $@
+#$(LIB): $(OBJS)
+#	$(RM) -f $@
+#	$(AR) cr $@ $(OBJS)
+#	$(RANLIB) $@
 
 #
 # We really don't expect end users to use this rule.  It works only with
