--- a/mmap/unix/Makefile.in
+++ b/mmap/unix/Makefile.in
@@ -9,8 +9,8 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../../inc
-INCDIR1=../../include -I../../file_io/@OSDIR@
+INCDIR=../../include 
+INCDIR1=../../file_io/@OSDIR@
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
 LIB=libmmap.a
@@ -20,7 +20,7 @@ OBJS=mmap.o common.o
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
 
-all: $(LIB)
+all: $(OBJS)
 
 clean:
 	$(RM) -f *.o *.a *.so
@@ -30,10 +30,10 @@ distclean: clean
 
 $(OBJS): Makefile
 
-$(LIB): $(OBJS)
-	$(RM) -f $@
-	$(AR) cr $@ $(OBJS)
-	$(RANLIB) $@
+#$(LIB): $(OBJS)
+#	$(RM) -f $@
+#	$(AR) cr $@ $(OBJS)
+#	$(RANLIB) $@
 
 #
 # We really don't expect end users to use this rule.  It works only with
