Insert some output messages when creating the library.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59547 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -42,8 +42,12 @@ all: Makefile $(MODULES) subdirs
 	@rm -Rf objs
 	@mkdir objs
 	@rm -f @LIBPREFIX@apr.a
+	@echo "===> Copying object files to objs directory"
 	@for i in $(SUBDIRS); do cp $$i/*.o objs ; done;
+	@echo "<=== Done Copying files"
+	@echo "===> Creating unified library"
 	@$(AR) cr @LIBPREFIX@apr.a objs/*.o
+	@echo "<=== Library built"
 
 clean: subdirs_clean
 	$(RM) -f *.o *.a *.so objs/*.o
