--- a/configure.in
+++ b/configure.in
@@ -367,6 +367,14 @@ AC_SUBST(stdioh)
 AC_SUBST(sys_typesh)
 AC_SUBST(sys_uioh)
 
+AC_CACHE_CHECK([for tm_gmtoff in struct tm], ac_cv_struct_tm_gmtoff,
+[AC_TRY_COMPILE([#include <sys/types.h>
+#include <$ac_cv_struct_tm>], [struct tm tm; tm.tm_gmtoff;],
+  ac_cv_struct_tm_gmtoff=yes, ac_cv_struct_tm_gmtoff=no)])
+
+if test "$ac_cv_struct_tm_gmtoff" = "yes"; then
+    AC_DEFINE(HAVE_GMTOFF)
+fi
 
 MAKEFILE1="Makefile lib/Makefile "
 SUBDIRS="lib "
