Cleanup the Makefile for APR a bit.  Get rid of some of the echos, and just display the commands as they are executed.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59550 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -42,12 +42,8 @@ all: Makefile $(MODULES) subdirs
 	@rm -Rf objs
 	@mkdir objs
 	@rm -f @LIBPREFIX@apr.a
-	@echo "===> Copying object files to objs directory"
-	@for i in $(SUBDIRS); do cp $$i/*.o objs ; done;
-	@echo "<=== Done Copying files"
-	@echo "===> Creating unified library"
-	@$(AR) cr @LIBPREFIX@apr.a objs/*.o
-	@echo "<=== Library built"
+	for i in $(SUBDIRS); do cp $$i/*.o objs ; done;
+	$(AR) cr @LIBPREFIX@apr.a objs/*.o
 
 clean: subdirs_clean
 	$(RM) -f *.o *.a *.so objs/*.o
