We now link on FreeBSD 2.2.x.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59551 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -44,6 +44,7 @@ all: Makefile $(MODULES) subdirs
 	@rm -f @LIBPREFIX@apr.a
 	for i in $(SUBDIRS); do cp $$i/*.o objs ; done;
 	$(AR) cr @LIBPREFIX@apr.a objs/*.o
+	$(RANLIB) @LIBPREFIX@apr.a
 
 clean: subdirs_clean
 	$(RM) -f *.o *.a *.so objs/*.o
