--- a/configure.in
+++ b/configure.in
@@ -1,3 +1,4 @@
+
 AC_CONFIG_AUX_DIR(./helpers)
 OS=`./config.guess`
 OS=`./config.sub $OS` 
@@ -28,6 +29,42 @@ AC_PROG_MAKE_SET
 AC_CHECK_PROG(RM, rm, rm)
 AC_CHECK_PROG(AR, ar, ar)
 
+# This macro needs to be here in case we are on an AIX box.
+AC_AIX
+
+AC_CACHE_CHECK([for threads], ac_cv_enable_threads, 
+  [ AC_ARG_ENABLE(threads,
+    [  --enable-threads  Enable threading support in APR.], 
+    [ ] , 
+    [ AC_CHECK_HEADERS(pthread.h,  
+                   [ ac_cv_enable_threads="pthread" ] , 
+                   [ ac_cv_enable_threads="no" ] ) ] ) ] ) 
+
+if test "$ac_cv_enable_threads" = "no"; then 
+    threads="0"
+    pthreadh="0"
+else
+    if test "$ac_cv_enable_threads" = "pthread"; then
+      AC_CHECK_HEADERS(pthread.h, [ 
+          threads="1"
+          pthreadh="1"
+          AC_DEFINE(USE_THREADS) ], [
+          threads="0"
+          pthreadh="0" ] )
+    fi
+fi
+
+pthreadser="0"
+if test "$threads" = "1"; then
+    AC_CHECK_DEFINE(PTHREAD_PROCESS_SHARED, pthread.h)
+    AC_CHECK_LIB(pthread, pthread_mutex_init, [
+        AC_DEFINE(USE_PTHREAD_SERIALIZE)
+        pthreadser="1" ])
+    AC_CHECK_LIB(c_r, pthread_mutex_init, [ 
+        AC_DEFINE(USE_PTHREAD_SERIALIZE)
+        pthreadser="1"])
+fi
+
 AC_ARG_WITH(debug,[  --with-debug              Turn on debugging and compile time warnings],
 	[if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -g -Wall"; else CFLAGS="$CFLAGS -g"; fi])
 
@@ -41,10 +78,6 @@ case "$OS:$CC" in
         AR="ar"
         ;;
 esac
-
-
-# This macro needs to be here in case we are on an AIX box.
-AC_AIX
 
 dnl Checks for standard typedefs
 AC_TYPE_OFF_T
@@ -80,9 +113,6 @@ fi
 if test "$ac_cv_sizeof_longlong" = "8"; then
     long_value="__int64"
 fi
-AC_SUBST(short_value)
-AC_SUBST(int_value)
-AC_SUBST(long_value)
 
 if test "$ac_cv_type_off_t" = "yes"; then
     off_t_value="off_t"
@@ -100,10 +130,6 @@ else
     ssize_t_value="ap_int32_t"
 fi
 
-AC_SUBST(off_t_value)
-AC_SUBST(size_t_value)
-AC_SUBST(ssize_t_value)
-
 AC_CHECK_SIZEOF_EXTENDED([#include <sys/types.h>], ssize_t, 8)
 
 # Use /bin/sh if it exists, otherwise go looking for sh in the path
@@ -114,7 +140,6 @@ AC_CHECK_PROG(SH, sh, sh)
 
 AC_CHECK_DEFINE(LOCK_EX, sys/file.h)
 AC_CHECK_DEFINE(F_SETLK, fcntl.h)
-AC_CHECK_DEFINE(PTHREAD_PROCESS_SHARED, pthread.h)
 
 dnl Checks for libraries.
 AC_BEGIN_DECISION([lock implementation method])
@@ -153,23 +178,8 @@ else
     procpthreadser="0"
 fi
 
-AC_SUBST(flockser)
-AC_SUBST(sysvser)
-AC_SUBST(fcntlser)
-AC_SUBST(procpthreadser)
-
-pthreadser="0"
-AC_CHECK_LIB(pthread, pthread_mutex_init, [
-    AC_DEFINE(USE_PTHREAD_SERIALIZE)
-    pthreadser="1" ])
-AC_CHECK_LIB(c_r, pthread_mutex_init, [ 
-    AC_DEFINE(USE_PTHREAD_SERIALIZE)
-    pthreadser="1"])
-AC_SUBST(pthreadser)
-
 ac_cv_define_READDIR_IS_THREAD_SAFE=no
 AC_CHECK_LIB(c_r, readdir, AC_DEFINE(READDIR_IS_THREAD_SAFE))
-
 
 case "$OS" in
    *-os2*)
@@ -308,46 +318,6 @@ AC_SUBST(sendfile)
 
 AC_CHECK_FUNCS(gmtime_r localtime_r)
 
-AC_MSG_CHECKING(whether to enable thread support)
-AC_ARG_ENABLE(threads,
-[  --enable-threads  Enable threading support in APR.],
-[
-  if test "$enableval" = "no"; then 
-    threads="0"
-    pthreadh="0"
-    AC_SUBST(threads)
-    AC_SUBST(pthreadh)
-    AC_MSG_RESULT(no)
-  else
-    if test "$enableval" = "pthread"; then
-      AC_CHECK_HEADERS(pthread.h, [ 
-          threads="1"
-          pthreadh="1"
-          AC_SUBST(pthreadh)
-          AC_SUBST(threads) ], [
-          threads="0"
-          pthreadh="0"
-          AC_SUBST(pthreadh)
-          AC_SUBST(threads) ] )
-      AC_MSG_RESULT(yes)
-    else
-      AC_MSG_RESULT(no)
-    fi
-  fi
-],
-[
-  AC_CHECK_HEADERS(pthread.h, [
-          threads="1"
-          pthreadh="1"
-          AC_SUBST(pthreadh)
-          AC_SUBST(threads) ], [
-          threads="0"
-          pthreadh="0"
-          AC_SUBST(pthreadh)
-          AC_SUBST(threads) ] )
-]) 
-
-
 dnl Start building stuff from our information
 AC_SUBST(LDLIBS)
 AC_SUBST(OPTIM)
@@ -366,6 +336,19 @@ AC_SUBST(stdargh)
 AC_SUBST(stdioh)
 AC_SUBST(sys_typesh)
 AC_SUBST(sys_uioh)
+AC_SUBST(threads)
+AC_SUBST(pthreadh)
+AC_SUBST(short_value)
+AC_SUBST(int_value)
+AC_SUBST(long_value)
+AC_SUBST(off_t_value)
+AC_SUBST(size_t_value)
+AC_SUBST(ssize_t_value)
+AC_SUBST(flockser)
+AC_SUBST(sysvser)
+AC_SUBST(fcntlser)
+AC_SUBST(procpthreadser)
+AC_SUBST(pthreadser)
 
 AC_CACHE_CHECK([for tm_gmtoff in struct tm], ac_cv_struct_tm_gmtoff,
 [AC_TRY_COMPILE([#include <sys/types.h>
