This fixes the bug in my last commit.  Apache always caches a value for enable-threads.  This allows us to re-configure the server for different MPM's without worrying about not having APR-threads available.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59553 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -45,6 +45,18 @@ if test "$ac_cv_enable_threads" = "no"; then
     pthreadh="0"
 else
     if test "$ac_cv_enable_threads" = "pthread"; then
+# We have specified pthreads for our threading library, just make sure
+# that we have everything we need
+      AC_CHECK_HEADERS(pthread.h, [ 
+          threads="1"
+          pthreadh="1"
+          AC_DEFINE(USE_THREADS) ], [
+          threads="0"
+          pthreadh="0" ] )
+    else
+# We basically specified that we wanted threads, but not how to implement
+# them.  In this case, just look for pthreads.  In the future, we can check
+# for other threading libraries as well.
       AC_CHECK_HEADERS(pthread.h, [ 
           threads="1"
           pthreadh="1"
