Add check for socklen_t. Falls back to unsigned int.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59556 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -306,6 +306,8 @@ AC_TYPE_SIZE_T
 AC_FUNC_MMAP
 AC_FUNC_SETPGRP
 
+APR_CHECK_SOCKLEN_T
+
 if test "$ac_cv_func_mmap_fixed_mapped" = "yes"; then 
     mmap="1"
     AC_SUBST(mmap)
