--- a/locks/unix/Makefile.in
+++ b/locks/unix/Makefile.in
@@ -17,7 +17,7 @@ INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I.
 
 OBJS=locks.o \
 	crossproc.o \
-	intraproc.o \
+	intraproc.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
