--- a/Makefile.in
+++ b/Makefile.in
@@ -39,7 +39,7 @@ SUBDIRS=@SUBDIRS@
 # building the entire package.
 #
 all: Makefile $(MODULES) subdirs
-	@rm -Rf objs
+	@rm -rf objs
 	@mkdir objs
 	@rm -f @LIBPREFIX@apr.a
 	for i in $(SUBDIRS); do cp $$i/*.o objs ; done;
@@ -55,7 +55,7 @@ distclean: subdirs_distclean
 	-$(RM) -f *.o *.a *.so
 	-$(RM) -f config.cache config.status config.log
 	-$(RM) -f Makefile
-	-$(RM) -Rf objs
+	-$(RM) -rf objs
 
 subdirs:
 	@for i in $(SUBDIRS); do \
