Use REENTRANCY_FLAGS from config.cache (effectively only set by Apache)
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59588 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -80,6 +80,10 @@ fi
 AC_ARG_WITH(debug,[  --with-debug              Turn on debugging and compile time warnings],
 	[if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -g -Wall"; else CFLAGS="$CFLAGS -g"; fi])
 
+dnl inherit REENTRANCY_FLAGS
+test -n "$ac_cv_pass_REENTRANCY_FLAGS" && \
+CFLAGS="$CFLAGS $ac_cv_pass_REENTRANCY_FLAGS"
+
 dnl # this is the place to put specific options for platform/compiler
 dnl # combinations
 case "$OS:$CC" in
