--- a/configure.in
+++ b/configure.in
@@ -32,12 +32,8 @@ AC_CHECK_PROG(AR, ar, ar)
 # This macro needs to be here in case we are on an AIX box.
 AC_AIX
 
-dnl inherit REENTRANCY_FLAGS
-test -n "$ac_cv_pass_REENTRANCY_CFLAGS" && \
-CFLAGS="$CFLAGS $ac_cv_pass_REENTRANCY_CFLAGS"
-
-test -n "$ac_cv_pass_REENTRANCY_LDFLAGS" && \
-LDFLAGS="$LDFLAGS $ac_cv_pass_REENTRANCY_LDFLAGS"
+REENTRANCY_FLAGS
+PTHREADS_CHECK
 
 AC_CACHE_CHECK([for threads], ac_cv_enable_threads, 
   [ AC_ARG_ENABLE(threads,
