--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -40,6 +40,10 @@
 #define APR_USE_PROC_PTHREAD_SERIALIZE    @procpthreadser@ 
 #define APR_USE_PTHREAD_SERIALIZE         @pthreadser@ 
 
+#define APR_HAVE_IN_ADDR        @have_in_addr@
+#define APR_HAVE_INET_ADDR      @inet_addr@
+#define APR_HAVE_INET_NETWORK   @inet_network@
+
 #if APR_HAVE_SYS_TYPES_H
 #include <sys/types.h>
 #endif
