We need to know if a platform has fork or not.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59623 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -309,11 +309,13 @@ AC_CHECK_FUNCS(pthread_sigmask)
 AC_CHECK_FUNCS(strcasecmp stricmp poll setsid)
 AC_CHECK_FUNCS(sigaction writev)
 AC_CHECK_FUNCS(sendfile, [ sendfile="1" ], [ sendfile="0" ]) 
+AC_CHECK_FUNCS(fork, [ fork="1" ], [ fork="0" ]) 
 AC_CHECK_FUNCS(getpass)
 AC_CHECK_FUNC(inet_addr, [ inet_addr="1" ], [ inet_addr="0" ])
 AC_CHECK_FUNC(inet_network, [ inet_network="1" ], [ inet_network="0" ])
 AC_CHECK_FUNC(_getch)
 AC_SUBST(sendfile)
+AC_SUBST(fork)
 AC_SUBST(inet_addr)
 AC_SUBST(inet_network)
 
