--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -53,6 +53,7 @@
 #define APR_HAS_THREADS  @threads@
 #define APR_HAS_SENDFILE @sendfile@
 #define APR_HAS_MMAP     @mmap@
+#define APR_HAS_FORK     @fork@
 
 /* Typedefs that APR needs. */
 
