--- a/configure.in
+++ b/configure.in
@@ -223,7 +223,7 @@ AC_CHECK_HEADERS(process.h)
 AC_CHECK_HEADERS(pwd.h)
 AC_CHECK_HEADERS(sys/sem.h)
 AC_CHECK_HEADERS(setjmp.h)
-AC_CHECK_HEADERS(signal.h)
+AC_CHECK_HEADERS(signal.h, signalh="1", signalh="0")
 AC_CHECK_HEADERS(stdarg.h, stdargh="1", stdargh="0")
 AC_CHECK_HEADERS(stddef.h)
 AC_CHECK_HEADERS(stdio.h, stdioh="1", stdioh"0")
@@ -384,6 +384,7 @@ AC_SUBST(stdargh)
 AC_SUBST(stdioh)
 AC_SUBST(sys_typesh)
 AC_SUBST(sys_uioh)
+AC_SUBST(signalh)
 AC_SUBST(threads)
 AC_SUBST(pthreadh)
 AC_SUBST(short_value)
