--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -33,6 +33,7 @@
 #define APR_HAVE_STDIO_H        @stdioh@
 #define APR_HAVE_SYS_TYPES_H    @sys_typesh@
 #define APR_HAVE_SYS_UIO_H      @sys_uioh@
+#define APR_HAVE_SIGNAL_H       @signalh@
 
 #define APR_USE_FLOCK_SERIALIZE           @flockser@ 
 #define APR_USE_SYSVSEM_SERIALIZE         @sysvser@
