--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -56,10 +56,11 @@
 #endif
 
 /*  APR Feature Macros */
-#define APR_HAS_THREADS  @threads@
-#define APR_HAS_SENDFILE @sendfile@
-#define APR_HAS_MMAP     @mmap@
-#define APR_HAS_FORK     @fork@
+#define APR_HAS_SHARED_MEMORY     @sharedmem@
+#define APR_HAS_THREADS           @threads@
+#define APR_HAS_SENDFILE          @sendfile@
+#define APR_HAS_MMAP              @mmap@
+#define APR_HAS_FORK              @fork@
 
 /* Typedefs that APR needs. */
 
