--- a/shmem/unix/mm/configure.in
+++ b/shmem/unix/mm/configure.in
@@ -93,12 +93,16 @@ AC_CONFIGURE_PART(Virtual Memory Page Size)
 AC_HAVE_HEADERS(unistd.h)
 AC_HAVE_FUNCS(getpagesize sysconf)
 AC_CHECK_DEFINE(_SC_PAGESIZE, unistd.h)
+AC_HAVE_HEADERS(kernel/OS.h)
+AC_CHECK_DEFINE(B_PAGE_SIZE, kernel/OS.h)
 
 AC_BEGIN_DECISION([memory page size determination])
 AC_IFALLYES(header:unistd.h func:getpagesize, 
             AC_DECIDE(MM_VMPS_GETPAGESIZE, [4.2BSD getpagesize()]))
 AC_IFALLYES(header:unistd.h func:sysconf define:_SC_PAGESIZE, 
             AC_DECIDE(MM_VMPS_SYSCONF, [POSIX.1 sysconf(_SC_PAGESIZE)]))
+AC_IFALLYES(header:kernel/OS.h define:B_PAGE_SIZE,
+            AC_DECIDE(MM_VMPS_BEOS, [BeOS B_PAGE_SIZE])) 
 AC_END_DECISION
 AC_DEFINE_UNQUOTED($ac_decision)
 
@@ -114,6 +118,8 @@ AC_HAVE_FUNCS(mmap munmap shm_open shm_unlink)
 AC_TEST_FILE(/dev/zero)
 AC_HAVE_HEADERS(sys/ipc.h sys/shm.h sys/file.h)
 AC_HAVE_FUNCS(shmget shmat shmdt shmctl)
+AC_HAVE_HEADERS(kernel/OS.h)
+AC_HAVE_FUNCS(create_area)
 
 AC_BEGIN_DECISION([shared memory allocation method])
 AC_IFALLYES(header:sys/mman.h func:mmap func:munmap, 
@@ -127,6 +133,8 @@ AC_IFALLYES(header:sys/ipc.h header:sys/shm.h header:sys/file.h dnl
             AC_DECIDE(MM_SHMT_IPCSHM, [SysV IPC shmget()]))
 AC_IFALLYES(header:sys/mman.h func:mmap func:munmap define:MAP_ANON, 
             AC_DECIDE(MM_SHMT_MMANON, [4.4BSD-style mmap() via MAP_ANON]))
+AC_IFALLYES(header:kernel/OS.h func:create_area,
+           AC_DECIDE(MM_SHMT_BEOS, [BeOS areas]))
 case $PLATFORM in
     *-*-linux* ) 
         #   Linux has problems with MM_SHMT_MMANON
@@ -155,6 +163,8 @@ AC_CHECK_DEFINE(LOCK_EX, sys/file.h)
 AC_CHECK_DEFINE(F_SETLK, fcntl.h)
 AC_CHECK_DEFINE(IPC_PRIVATE, sys/ipc.h)
 AC_CHECK_DEFINE(SEM_UNDO, sys/sem.h)
+AC_HAVE_HEADERS(kernel/OS.h)
+AC_CHECK_FUNCS(create_sem, kernel/OS.h)
 
 AC_MSG_CHECKING(whether union semun is defined in sys/sem.h)
 AC_TRY_COMPILE([
@@ -178,6 +188,8 @@ AC_IFALLYES(header:sys/ipc.h header:sys/sem.h header:sys/file.h dnl
             AC_DECIDE(MM_SEMT_IPCSEM, [SysV IPC semget()]))
 AC_IFALLYES(header:fcntl.h define:F_SETLK, 
             AC_DECIDE(MM_SEMT_FCNTL, [SVR4-style fcntl() on temporary file]))
+AC_IFALLYES(header:kernel/OS.h func:create_sem,
+            AC_DECIDE(MM_SEMT_BEOS, [BeOS semaphores/benaphores]))
 AC_ARG_WITH(sem,dnl
 [  --with-sem=TYPE         force semaphore type: FLOCK FCNTL IPCSEM],
 AC_DECISION_FORCE(MM_SEMT_$withval)
