Add a test program for pipes.  Add support for non-buffered CGI's to mod_cgi. This still doesn't terminate CGI's after a time limit, that's the next step.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59666 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -23,7 +23,8 @@ TARGETS= testfile@EXEEXT@ \
 	ab@EXEEXT@ \
 	htdigest@EXEEXT@ \
 	testmmap@EXEEXT@ \
-	testshmem@EXEEXT@
+	testshmem@EXEEXT@ \
+	testpipe@EXEEXT@
 
 OBJS= testfile.o \
 	testproc.o \
@@ -75,6 +76,9 @@ testmmap@EXEEXT@: testmmap.o
 
 testshmem@EXEEXT@: testshmem.o
 	$(CC) $(CFLAGS) testshmem.o -o testshmem@EXEEXT@ $(LDFLAGS)
+
+testpipe@EXEEXT@: testpipe.o
+	$(CC) $(CFLAGS) testpipe.o -o testpipe@EXEEXT@ $(LDFLAGS)
 
 clean:
 	$(RM) -f *.o *.a *.so $(TARGETS)
