fix an dependency ordering problem which shows up when you use "make -j2 MAKE='make -j2'" on an SMP box.
it's still not right if Makefile itself is out of date... i forget the
trick to do that right.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59669 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -40,9 +40,9 @@ LIBAPR = @LIBPREFIX@apr.a
 # Rules for building specific targets, starting with 'all' for
 # building the entire package.
 #
-all: Makefile $(MODULES) subdirs $(LIBAPR)
+all: Makefile $(LIBAPR)
 
-$(LIBAPR):
+$(LIBAPR): $(MODULES) subdirs
 	@rm -rf objs
 	@mkdir objs
 	@rm -f $@
