--- a/configure.in
+++ b/configure.in
@@ -266,7 +266,7 @@ echo -e "\nChecking for Threads"
 AC_CACHE_CHECK([for threads], ac_cv_enable_threads,
   [ AC_ARG_ENABLE(threads,
     [  --enable-threads  Enable threading support in APR.],
-    [ ] ,
+    [ ac_cv_enable_threads=$enableval] ,
     [ AC_CHECK_HEADERS(pthread.h,
                    [ ac_cv_enable_threads="pthread" ] ,
                    [ ac_cv_enable_threads="no" ] ) ] ) ] )
