--- a/configure.in
+++ b/configure.in
@@ -101,7 +101,8 @@ dnl #----------------------------- Checks for Any required Functions
 dnl Checks for library functions.
 AC_CHECK_FUNCS(pthread_sigmask)
 AC_CHECK_FUNCS(strcasecmp stricmp poll setsid)
-AC_CHECK_FUNCS(sigaction writev)
+AC_CHECK_FUNCS(sigaction, [ have_sigaction="1" ], [ have_sigaction="0" ]) 
+AC_CHECK_FUNCS(writev)
 AC_CHECK_FUNCS(sendfile, [ sendfile="1" ], [ sendfile="0" ])
 AC_CHECK_FUNCS(fork, [ fork="1" ], [ fork="0" ])
 AC_CHECK_FUNCS(getpass)
@@ -113,6 +114,7 @@ AC_SUBST(sendfile)
 AC_SUBST(fork)
 AC_SUBST(inet_addr)
 AC_SUBST(inet_network)
+AC_SUBST(have_sigaction)
 
 
 dnl #----------------------------- Checks for Any required Headers
